[gd_scene load_steps=2 format=2]

[ext_resource path="res://sources/game/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="PauseButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResumePopup" type="PopupDialog" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="ResumeButton" type="TextureButton" parent="ResumePopup"]
margin_right = 40.0
margin_bottom = 40.0

[node name="GotoMenuButton" type="TextureButton" parent="ResumePopup"]
margin_right = 40.0
margin_bottom = 40.0
